# dspace-rest-python

./: .gitignore  .pylintrc  CHANGELOG.md  DARRYL_WOZ_HERE  LICENSE  MAINTAINING.md  README.md  console.py  dspace.py  example.py  example_eperson_group.py  example_exceptions.py  example_gets.py  example_patch.py  example_workflow.py  publish.sh  pyproject.toml  requirements-build.txt  requirements-pylint.txt  requirements.txt  setup.py  solr_example.py
.github/workflows/: pylint.yml
dspace_rest_client/: __init__.py  client.py  main.py  models.py
