[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspace-rest-client"
dynamic = ["version"]
description = "A DSpace REST API client library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Kim Shepherd", email = "kim@the-library-code.de"}
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.32.3",
    "pysolr >= 3.10.0",
]
requires-python = ">=3.8.0"

[project.urls]
Documentation = "https://github.com/the-library-code/dspace-rest-python/blob/main/README.md"
GitHub = "https://github.com/the-library-code/dspace-rest-python"
Changelog = "https://github.com/the-library-code/dspace-rest-python/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
version_file = "dspace_rest_client/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["dspace_rest_client*"]
